# kwhatstux

./: CHANGELOG.md  CMakeLists.txt  kwhatstux.notifyrc  org.kde.kwhatstux.desktop  release-please-config.json
.claude/commands/: pkg.md
.github/workflows/: build.yml
icons/: icons.qrc
src/: CMakeLists.txt  kwhatstuxui.rc  main.cpp  mainwindow.cpp  mainwindow.h
